src/Base/main/default/objects/Insurance_Item__c/fields/Commissionable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Amount__c</fullName>
    <formula>Amount__c *  InsurancePlanItem__r.InsurancePlan__r.Profit_Percent__c</formula>
    <label>Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>