src/Base/main/default/objects/Insurance_Item__c/fields/dhConverted__c.field-meta.xml
<CustomField>
    <fullName>dhConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dhConverted</label>
    <type>Checkbox</type>
</CustomField>