src/Base/main/default/objects/Insurance_Item__c/fields/InsurancePlanItem__c.field-meta.xml
<CustomField>
    <fullName>InsurancePlanItem__c</fullName>
    <label>Insurance Plan Item</label>
    <referenceTo>InsurancePlanItem__c</referenceTo>
    <relationshipLabel>Insurance Items</relationshipLabel>
    <relationshipName>Insurance_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>